# SLCKit

./: .gitignore  CMakeLists.txt  README.md
include/: boundary.h  layer.h  math.hpp  model.h  point.h  polygon.h  slckit.h  slckit_global.h
src/: CMakeLists.txt  boundary.cpp  layer.cpp  model.cpp  point.cpp  polygon.cpp  slckit.cpp
tests/: CMakeLists.txt
tests/testSLCKit/: CMakeLists.txt  testmodelkit.cpp
